# TinyWebServer_demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  audit_report.md  diff.md  implementation_plan.md  notes.txt  report.md  tools.py
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmark/src/: benchmark_base.cpp  benchmark_concurrent.cpp  benchmark_factory.cpp  benchmark_latency.cpp  benchmark_memory.cpp  benchmark_qps.cpp  benchmark_runner.cpp  benchmark_step_stress.cpp
build_temp/: CMakeCache.txt
build_temp_check/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_temp_check/Testing/Temporary/: CTestCostData.txt
configs/: README.md  server.example.json  server.so_reuseport.example.json
configs/benchmark/: concurrent_config.json  latency_config.json  memory_config.json  qps_config.json  step_stress_config.json
doc/: V1 总结故障排查手册 .md  V4 核心问题与排查修复总结.md  debug.md  v2.md  v3.md  v3故障排错.md  v4.md  v5  v5.md  v6.md  v7.md  测试.md  高性能 WebServer 故障排查手册 (V1 总结).md  高性能网络库的核心排错清单.md
include/: LogStream.h  Logger.h  async_logger.h  benchmark.h  buffer_chain.h  connection.h  connection_limits.h  http_parser.h  http_request.h  http_response.h  log_buffer.h  memory_pool.h  request_validator.h  server.h  server_metrics.h  static_resource_manager.h  thread_pool.h  timer_manager.h
include/common/: error.h
include/config/: json_simple.h  server_config.h
include/error/: error.h
include/http/: conditional_request_handler.h  keep_alive_manager.h
include/http2/: h2_connection.h  h2_frame_parser.h  h2_stream.h  hpack_decoder.h
include/logging/: structured_logger.h
include/plugin/: example_plugin.h  plugin.h  plugin_manager.h
include/reactor/: batch_io_handler.h  epoll_reactor.h  event_loop.h  event_loop_thread.h  event_loop_thread_pool.h  multi_listen_socket.h  socket_utils.h
include/timer/: timer_wheel.h
public/: index.html
reactor/: batch_io_handler.cpp  event_loop.cpp  event_loop_thread.cpp  event_loop_thread_pool.cpp  multi_listen_socket.cpp  socket_utils.cpp
scripts/: compare_benchmark.py
src/: Logger.cpp  async_Logger.cpp  connection.cpp  epoll_reactor.cpp  error.cpp  http_parser.cpp  http_request.cpp  http_response.cpp  main.cpp  memory_pool.cpp  request_validator.cpp  server.cpp  server_metrics.cpp  socket_utils.cpp  static_resource_manager.cpp  thread_pool.cpp  timer_manager.cpp
src/config/: server_config.cpp
src/error/: error.cpp
src/http/: conditional_request_handler.cpp  keep_alive_manager.cpp
src/http2/: h2_connection.cpp  h2_frame_parser.cpp  h2_stream.cpp  hpack_decoder.cpp
src/logging/: structured_logger.cpp
src/plugin/: example_plugin.cpp  plugin_manager.cpp
src/timer/: timer_wheel.cpp
test/: test_memory_pool.cpp  test_request_validator.cpp
www/: index.html
